#49 Add header title to datatable exports

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -346,4 +346,6 @@ BalancePage.datatable.export-file-name=Balance
 
 BalancePage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for det samme regnskabs\u00E5r
 
-BalancePage.report.title= | Balance fra ${dateFrom} til ${dateTo} | Konti ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
+BalancePage.report.title=|\u00A0Balance fra ${dateFrom} til ${dateTo} | Konti ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
+
+BalancePage.columns.width=95,150,150,150
