#49 Add header title to datatable exports

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -191,6 +191,10 @@ ChartOfAccountsPage.datatable.export-file-name=Finance accounts
 
 ChartOfAccountsPage.report.title=Chart of accounts for: ${name}
 
+ChartOfAccountsPage.columns.width=150,110,105,100,80
+
+ChartOfAccountsPage.page.size=595,842
+
 #DailyLedgerPage-----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Daily ledgers
 
@@ -212,6 +216,9 @@ DailyLedgerPage.financeAccount=Standard reverse finance account
 
 DailyLedgerPage.report.title=Daily ledgers for: ${name}
 
+DailyLedgerPage.columns.width=545
+
+DailyLedgerPage.page.size=595,842
 
 #FiscalYearPage -----------------------------------------------------------------------------------------------------------------------
 FiscalYearPage.datatable.export-file-name=Fiscal years
@@ -241,6 +248,10 @@ FiscalYearPage.action=Action
 
 FiscalYearPage.report.title=Fiscal years for: ${name}
 
+FiscalYearPage.columns.width=135,135,135,135
+
+FiscalYearPage.page.size=595,842
+
 
 #VatTypesPage -----------------------------------------------------------------------------------------------------------------------
 VatTypesPage.datatable.export-file-name=Vat types
@@ -263,6 +274,10 @@ VatTypesPage.name.all.ready.exists=Name is all ready in use
 VatTypesPage.name.to.long=Name is to long
 
 VatTypesPage.report.title=VAT types for: ${name}
+
+VatTypesPage.columns.width=140,160,160,85
+
+VatTypesPage.page.size=595,842
 
 #BookkeepingPage -----------------------------------------------------------------------------------------------------------------------
 BookkeepingPage.datatable.export-file-name=Daily Ledger
@@ -307,6 +322,10 @@ BookkeepingPage.button.clear.daily.ledger=Clear ledger
 
 BookkeepingPage.report.title=Dailyledger for: ${name}
 
+BookkeepingPage.columns.width=84,114,134,84,99,89,99,89
+
+BookkeepingPage.page.size=842,595
+
 #BaseReportForm ------------------------------------------------------------------------------------------------------------------
 
 dateFrom=From date
@@ -337,3 +356,7 @@ BalancePage.datatable.export-file-name=Balance
 BalancePage.dates.not.within.same.fiscal.year=Dates not within same fiscal year
 
 BalancePage.report.title=| Balance from ${dateFrom} to ${dateTo} | Accounts ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
+
+BalancePage.columns.width=95,150,150,150
+
+BalancePage.page.size=595,842
