--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -200,6 +200,10 @@ ChartOfAccountsPage.datatable.export-file-name=Finanskonti
 
 ChartOfAccountsPage.report.title=Kontoplan for: ${name}
 
+ChartOfAccountsPage.columns.width=150,110,105,100,80
+
+ChartOfAccountsPage.page.size=595,842
+
 #DailyLedgerPage -----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Kasseklader
 
@@ -220,6 +224,10 @@ DailyLedgerPage.nextBookingNumber=N\u00E6ste bilagsnummer
 DailyLedgerPage.financeAccount=Standard modkonto
 
 DailyLedgerPage.report.title=Kasseklader for: ${name}
+
+DailyLedgerPage.columns.width=545
+
+DailyLedgerPage.page.size=595,842
 
 #FiscalYearPage -----------------------------------------------------------------------------------------------------------------------
 FiscalYearPage.datatable.export-file-name=Regnskabs\u00E5r
@@ -249,6 +257,10 @@ FiscalYearPage.action=Handling
 
 FiscalYearPage.report.title=Regnskabs\u00E5r for: ${name}
 
+FiscalYearPage.columns.width=135,135,135,135
+
+FiscalYearPage.page.size=595,842
+
 #VatTypesPage -----------------------------------------------------------------------------------------------------------------------
 VatTypesPage.datatable.export-file-name=Momstyper
 
@@ -270,6 +282,10 @@ VatTypesPage.name.all.ready.exists=Navnet er allerede i brug
 VatTypesPage.name.to.long=Navnet er for langt
 
 VatTypesPage.report.title=Momstyper for: ${name}
+
+VatTypesPage.columns.width=140,160,160,85
+
+VatTypesPage.page.size=595,842
 
 #BookkeepingPage -----------------------------------------------------------------------------------------------------------------------
 BookkeepingPage.datatable.export-file-name=Kasseklade
@@ -314,6 +330,10 @@ BookkeepingPage.button.clear.daily.ledger=Ryd kassekladden
 
 BookkeepingPage.report.title=Kassekladde for: ${name}
 
+BookkeepingPage.columns.width=84,114,134,84,99,89,99,89
+
+BookkeepingPage.page.size=842,595
+
 #BaseReportForm --------------------------------------------------------------------------------------------------------------------
 
 dateFrom=Fra dato
@@ -349,3 +369,5 @@ BalancePage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for det sam
 BalancePage.report.title=|\u00A0Balance fra ${dateFrom} til ${dateTo} | Konti ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
 
 BalancePage.columns.width=95,150,150,150
+
+BalancePage.page.size=595,842
