#54 Move export functions to use JasperReport instead

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -360,3 +360,39 @@ BalancePage.report.title=| Balance from ${dateFrom} to ${dateTo} | Accounts ${ac
 BalancePage.columns.width=95,150,150,150
 
 BalancePage.page.size=595,842
+
+#FinanceAccountsPage -----------------------------------------------------------------------------------------------------------------------
+
+FinanceAccountsPage.accountName=Account name
+FinanceAccountsPage.accountNumber=Account number
+
+FinanceAccountsPage.date=Date
+FinanceAccountsPage.bookingNumber=Booking number
+FinanceAccountsPage.text=Description
+FinanceAccountsPage.vatType.name=Vat type
+FinanceAccountsPage.amount=Amount
+FinanceAccountsPage.sum=Sum
+FinanceAccountsPage.postings=Postings
+
+FinanceAccountsPage.dateFrom=From date
+FinanceAccountsPage.dateTo=To date
+FinanceAccountsPage.accountFrom=From account
+FinanceAccountsPage.accountTo=To account
+
+FinanceAccountsPage.hide.accounts.without.sum=Hide accounts with 0 sum
+FinanceAccountsPage.hide.accounts.without.transactions=Hide accounts without transactions
+
+FinanceAccountsPage.plus.one.year=Next year same time
+FinanceAccountsPage.minus.one.year=Last year same time
+
+FinanceAccountsPage.dates.not.within.same.fiscal.year=Dates not within same fiscal year
+
+FinanceAccountsPage.no.accounts.found=No accounts found with chosen arguments
+
+FinanceAccountsPage.datatable.export-file-name=Finance accounts
+
+FinanceAccountsPage.report.title=| Finance accounts from ${dateFrom} to ${dateTo} | Accounts ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
+
+FinanceAccountsPage.columns.width=50,110,135,100,70,70
+
+FinanceAccountsPage.page.size=595,842
