--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -371,3 +371,40 @@ BalancePage.report.title=|\u00A0Balance fra ${dateFrom} til ${dateTo} | Konti ${
 BalancePage.columns.width=95,150,150,150
 
 BalancePage.page.size=595,842
+
+#FinanceAccountsPage -----------------------------------------------------------------------------------------------------------------------
+
+FinanceAccountsPage.accountName=Kontonummer
+FinanceAccountsPage.accountNumber=Kontonavn
+
+FinanceAccountsPage.date=Dato
+FinanceAccountsPage.bookingNumber=Bilagsnummer
+FinanceAccountsPage.text=Beskrivelse
+FinanceAccountsPage.vatType.name=Momstype
+FinanceAccountsPage.amount=Bel\u00F8b
+FinanceAccountsPage.sum=Sum
+FinanceAccountsPage.postings=Posteringer
+
+FinanceAccountsPage.dateFrom=Fra dato
+FinanceAccountsPage.dateTo=Til dato
+FinanceAccountsPage.accountFrom=Fra konto
+FinanceAccountsPage.accountTo=Til konto
+
+FinanceAccountsPage.compare.to=Sammenlign med
+FinanceAccountsPage.hide.accounts.without.sum=Skjul konti uden sum
+FinanceAccountsPage.hide.accounts.without.transactions=Skjul konti uden transaktioner
+
+FinanceAccountsPage.plus.one.year=N\u00E6ste \u00E5r samme interval
+FinanceAccountsPage.minus.one.year=Forrige \u00E5r samme interval
+
+FinanceAccountsPage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for det samme regnskabs\u00E5r
+
+FinanceAccountsPage.no.accounts.found=Ingen konti fundet med de valgte argumenter
+
+FinanceAccountsPage.datatable.export-file-name=Finanskonti
+
+FinanceAccountsPage.report.title=|\u00A0Finanskonti fra ${dateFrom} til ${dateTo} | Konti ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
+
+FinanceAccountsPage.columns.width=50,110,135,100,70,70
+
+FinanceAccountsPage.page.size=595,842
