--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -389,10 +389,4 @@ FinanceAccountsPage.dates.not.within.same.fiscal.year=Dates not within same fisc
 
 FinanceAccountsPage.no.accounts.found=No accounts found with chosen arguments
 
-FinanceAccountsPage.datatable.export-file-name=Finance accounts
-
-FinanceAccountsPage.report.title=| Finance accounts from ${dateFrom} to ${dateTo} | Accounts ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
-
-FinanceAccountsPage.columns.width=50,110,135,100,70,70
-
-FinanceAccountsPage.page.size=595,842
+FinanceAccountsPage.file.name=Finance accounts
