--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -401,10 +401,4 @@ FinanceAccountsPage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for
 
 FinanceAccountsPage.no.accounts.found=Ingen konti fundet med de valgte argumenter
 
-FinanceAccountsPage.datatable.export-file-name=Finanskonti
-
-FinanceAccountsPage.report.title=|\u00A0Finanskonti fra ${dateFrom} til ${dateTo} | Konti ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
-
-FinanceAccountsPage.columns.width=50,110,135,100,70,70
-
-FinanceAccountsPage.page.size=595,842
+FinanceAccountsPage.file.name=Finanskonti.pdf
