--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <spring.version>3.2.4.RELEASE</spring.version>
 
         <pdfbox.version>1.8.2</pdfbox.version>
-        <jexcelapi.version>2.6.12</jexcelapi.version>
+        <jasperreports.version>5.2.0</jasperreports.version>
 
         <jetty.version>8.1.12.v20130726</jetty.version>
         <slf4j.version>1.7.5</slf4j.version>
