--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -296,6 +296,16 @@
             <artifactId>wicketstuff-jasperreports</artifactId>
             <version>6.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
 
     </dependencies>
 
