--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -401,4 +401,5 @@ FinanceAccountsPage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for
 
 FinanceAccountsPage.no.accounts.found=Ingen konti fundet med de valgte argumenter
 
-FinanceAccountsPage.file.name=Finanskonti.pdf
+FinanceAccountsPage.file.name.pdf=Finanskonti.pdf
+FinanceAccountsPage.file.name.xls=Finanskonti.xls
