#14 Export financepostings to excel

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -16,6 +16,8 @@ button.close=Close
 button.clear.daily.ledger=Clear daily ledger
 button.yes=Yes
 button.no=No
+button.pdf=PDF
+button.xls=XLS
 
 modal.title.confirm=Confirm
 
@@ -390,3 +392,6 @@ FinanceAccountsPage.dates.not.within.same.fiscal.year=Dates not within same fisc
 FinanceAccountsPage.no.accounts.found=No accounts found with chosen arguments
 
 FinanceAccountsPage.file.name=Finance accounts
+
+financeAccounts.jasper.pdf=Finance accounts.pdf
+financeAccounts.jasper.xls=Finance accounts.xls
