--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -16,8 +16,8 @@ button.close=Luk
 button.clear.daily.ledger=Ryd kassekladen
 button.yes=Ja
 button.no=Nej
-
-
+button.pdf=PDF
+button.xls=XLS
 
 modal.title.confirm=Bekr\u00E6ft
 
@@ -401,5 +401,5 @@ FinanceAccountsPage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for
 
 FinanceAccountsPage.no.accounts.found=Ingen konti fundet med de valgte argumenter
 
-FinanceAccountsPage.file.name.pdf=Finanskonti.pdf
-FinanceAccountsPage.file.name.xls=Finanskonti.xls
+financeAccounts.jasper.pdf=Finanskonti.pdf
+financeAccounts.jasper.xls=Finanskonti.xls
