#14 Export financepostings to excel

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -357,11 +357,8 @@ BalancePage.datatable.export-file-name=Balance
 
 BalancePage.dates.not.within.same.fiscal.year=Dates not within same fiscal year
 
-BalancePage.report.title=| Balance from ${dateFrom} to ${dateTo} | Accounts ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
-
-BalancePage.columns.width=95,150,150,150
-
-BalancePage.page.size=595,842
+BalancePage.jasper.pdf=Balance.pdf
+BalancePage.jasper.xls=Balance.xls
 
 #FinanceAccountsPage -----------------------------------------------------------------------------------------------------------------------
 
@@ -393,5 +390,5 @@ FinanceAccountsPage.no.accounts.found=No accounts found with chosen arguments
 
 FinanceAccountsPage.file.name=Finance accounts
 
-financeAccounts.jasper.pdf=Finance accounts.pdf
-financeAccounts.jasper.xls=Finance accounts.xls
+FinanceAccountsPage.jasper.pdf=Finance accounts.pdf
+FinanceAccountsPage.jasper.xls=Finance accounts.xls
