--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -370,7 +370,8 @@ BalancePage.report.title=|\u00A0Balance fra ${dateFrom} til ${dateTo} | Konti ${
 
 BalancePage.columns.width=95,150,150,150
 
-BalancePage.page.size=595,842
+BalancePage.jasper.pdf=Balance.pdf
+BalancePage.jasper.xls=Balance.xls
 
 #FinanceAccountsPage -----------------------------------------------------------------------------------------------------------------------
 
@@ -401,5 +402,5 @@ FinanceAccountsPage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for
 
 FinanceAccountsPage.no.accounts.found=Ingen konti fundet med de valgte argumenter
 
-financeAccounts.jasper.pdf=Finanskonti.pdf
-financeAccounts.jasper.xls=Finanskonti.xls
+FinanceAccountsPage.jasper.pdf=Finanskonti.pdf
+FinanceAccountsPage.jasper.xls=Finanskonti.xls
