--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -140,6 +140,7 @@ FinanceAccountType.CURRENT_RESULT=Current year result
 FinanceAccountType.CATEGORY=Category
 FinanceAccountType.HEADLINE=Headline
 FinanceAccountType.SUM=Sum
+FinanceAccountType.CATEGORY_SUM=Category Sum
 FinanceAccountType.BALANCE_CHECK=Balance check
 
 FiscalYearStatus=Status
