--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -141,6 +141,7 @@ FinanceAccountType.CURRENT_RESULT=\u00C5rets resultat
 FinanceAccountType.CATEGORY=Kategori
 FinanceAccountType.HEADLINE=Overskrift
 FinanceAccountType.SUM=Sum
+FinanceAccountType.CATEGORY_SUM=Kategori Sum
 FinanceAccountType.BALANCE_CHECK=Balance check
 
 fiscalYearStatus=Status
