--- a/jetty/pom.xml
+++ b/jetty/pom.xml
@@ -31,6 +31,7 @@
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-core</artifactId>
             <version>${wicket.version}</version>
+            <scope>provided</scope>
         </dependency>
 
 
