#67 Move creation of start finance accounts into static array

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -1,6 +1,212 @@
 eazy.regnskab=Eazy accounting
 eazy.regnskab.brand=Eazy accounting (beta)
 
+# New Entity ----------------------------------------------------------------------------------------------------------------------------------------------------------
+
+new.entity.name=New Legal Entity
+new.entity.legalIdentification=12345678
+new.entity.address=New street 1
+new.entity.postalCode=1234
+
+start.ledger.name=Start ledger
+
+income.statement=INCOME STATEMENT
+
+sales=Sales
+sales.dk=Sales DKK
+sales.dk.vat.type=U25
+sales.dk.without.vat=Sales DKK without VAT
+sales.eur=Sales europe
+sales.eur.vat.type=EU_U25
+sales.world=Sales world
+sales.total=Sales total
+
+purchases=Purchases
+purchases.dk=Purchases DKK
+purchases.dk.vat.type=I25
+purchases.dk.without.vat=Purchases DKK without VAT
+purchases.eur=Purchases europe
+purchases.eur.vat.type=EU_I25
+purchases.world=Purchases world
+purchases.total=Purchases total
+
+wages=Employee expenses
+wages.wages=Wages
+wages.pension=Pension
+wages.holiday.pay=Holiday pay
+wages.driving.reimbursement=Driving reimbursement
+wages.insurance=Insurance
+wages.lunch=Lunch
+wages.other.cost=Other cost
+wages.total=Employee expenses total
+
+premises=Premises
+premises.rent=Rent
+premises.rent.vat.type=I25
+premises.supplies=Supplies
+premises.supplies.vat.type=I25
+premises.maintenance=Maintenance
+premises.maintenance.vat.type=I25
+premises.total=Premises total
+
+administration=Administration
+administration.office.supplies=Office supplies
+administration.office.supplies.vat.type=I25
+administration.insurance=Insurance
+administration.subscriptions=Subscriptions
+administration.subscriptions.vat.type=I25
+administration.subscriptions.without.vat=Subscriptions without VAT
+administration.telephone=Telephone
+administration.telephone.vat.type=I25
+administration.internet=Internet
+administration.internet.vat.type=I25
+administration.magazines=Magazines
+administration.magazines.vat.type=I25
+administration.finance.assistance=Finance assistance
+administration.finance.assistance.vat.type=I25
+administration.audit.assistance=Audit assistance
+administration.audit.assistance.vat.type=I25
+administration.legal.assistance=Legal assistance
+administration.legal.assistance.vat.type=I25
+administration.bad.debt=Bad dept
+administration.bad.debt.vat.type=I25
+administration.total=Administration total
+
+depreciation=Depreciation
+depreciation.inventory=Depreciation inventory
+depreciation.goodwill=Depreciation goodwill
+depreciation.rights=Depreciation rights
+depreciation.operation=Depreciation operations
+depreciation.leasehold=Depreciation leasehold improvements
+depreciation.total=Depreciation total
+
+received.interest=Received interest
+received.interest.bank=Received interest bank
+received.interest.debtor=Received interest debtor
+received.interest.total=Received interest total
+
+paid.interest=Paid interest
+paid.interest.bank=Paid interest bank
+paid.interest.creditor=Paid interest creditor
+paid.interest.public=Paid interest government
+paid.interest.total=Paid interest total
+
+tax=Taxes
+tax.company=Company tax
+tax.company.previous.year=Company tax previous year
+tax.deferred.tax=Deferred tax
+tax.total=Taxes total
+
+income.statement.total=INCOME STATEMENT TOTAL
+
+assets=ASSETS
+
+inventory=Inventory
+inventory.acquisition.cost.start=Inventory cost start of year
+inventory.acquisition.cost=Inventory cost
+inventory.acquisition.cost.vat.type=I25
+inventory.disposals=Inventory disposals
+inventory.depreciation.start=Inventory depreciation start of year
+inventory.depreciation=Inventory depreciation
+inventory.depreciation.on.disposals=Inventory depreciation on disposals
+inventory.total=Inventory total
+
+goodwill=Goodwill
+goodwill.acquisition.cost.start=Goodwill cost start of year
+goodwill.acquisition.cost=Goodwill cost
+goodwill.acquisition.cost.vat.type=I25
+goodwill.disposals=Goodwill disposals
+goodwill.depreciation.start=Goodwill depreciation start of year
+goodwill.depreciation=Goodwill depreciation
+goodwill.depreciation.on.disposals=Goodwill depreciation on disposals
+goodwill.total=Goodwill total
+
+rights=Rights
+rights.acquisition.cost.start=Rights cost start of year
+rights.acquisition.cost=Rights cost
+rights.acquisition.cost.vat.type=I25
+rights.disposals=Rights disposals
+rights.depreciation.start=Rights depreciation start of year
+rights.depreciation=Rights depreciation
+rights.depreciation.on.disposals=Rights depreciation on disposals
+rights.total=Rights total
+
+operation=Operation
+operation.acquisition.cost.start=Operations cost start of year
+operation.acquisition.cost=Operations cost
+operation.acquisition.cost.vat.type=I25
+operation.disposals=Operations disposals
+operation.depreciation.start=Operations depreciation start of year
+operation.depreciation=Operations depreciation
+operation.depreciation.on.disposals=Operations depreciation on disposals
+operation.total=Operation total
+
+leasehold=Leasehold
+leasehold.acquisition.cost.start=Leasehold improvements cost start of year
+leasehold.acquisition.cost=Leasehold improvements cost
+leasehold.acquisition.cost.vat.type=I25
+leasehold.disposals=Leasehold improvements disposals
+leasehold.depreciation.start=Leasehold improvements depreciation start of year
+leasehold.depreciation=Leasehold improvements depreciation
+leasehold.depreciation.on.disposals=Leasehold improvements depreciation on disposals
+leasehold.total=Leasehold total
+
+other.assets=Other assets
+debtors=Debtors
+other.receivables=Other receivables
+other.assets.total=Other assets total
+
+liquid.assets=Liquid assets
+liquid.assets.cash=Cash
+liquid.assets.bank.account=Bank account
+liquid.assets.total=Liquid assets total
+
+assets.total=ASSETS TOTAL
+
+liabilities=LIABILITIES
+
+equity=Equity
+equity.share.capital=Share capital
+equity.retained.earnings=Retained yearnings
+current.result=Current year result
+equity.total=Equity total
+
+provision=Provision
+provision.deferred.tax=Deferred tax
+provision.total=Provisions total
+
+long.term.debt=Long term debt
+long.term.debt.loan=Long term Loan
+long.term.debt.total=Long term debt total
+
+short.term.debt=Short term debt
+short.term.debt.bank=Bank credit
+short.term.debt.trade.creditors=Trade creditors
+short.term.debt.total=Short term debt total
+
+vat=VAT
+vat.dk.incoming=Purchase VAT
+vat.dk.outgoing=Sales VAT
+vat.dk.representation=Reprwsentation moms
+vat.eur.incoming=EU purchase VAT
+vat.eur.outgoing=EU sales VAT
+vat.reconciliation=VAT reconciliation
+vat.total=VAT total
+
+other.debt=Other debt
+other.debt.employee.tax.a-skat=Primary taxes
+other.debt.employee.tax.am=Employment contribution
+other.debt.employee.atp=State pension
+other.debt.employee.pension=Pension
+other.debt.employee.wages=Wages
+other.debt.employee.holiday.pay=Holiday pay
+other.debt.total=Other debt total
+
+
+liabilities.total=LIABILITIES TOTAL
+
+check=BALANCE CHECK
+
 #Buttons ----------------------------------------------------------------------------------------------------------------------------------------------------------
 
 button.save=Save
@@ -393,3 +599,4 @@ FinanceAccountsPage.file.name=Finance accounts
 
 FinanceAccountsPage.jasper.pdf=Finance accounts.pdf
 FinanceAccountsPage.jasper.xls=Finance accounts.xls
+
