--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -1,7 +1,218 @@
 eazy.regnskab=Eazy regnskab
 eazy.regnskab.brand=Eazy regnskab (beta)
 
+# New Entity ----------------------------------------------------------------------------------------------------------------------------------------------------------
+
+new.entity.name=Ny juridisk enhed
+new.entity.legalIdentification=12345678
+new.entity.address=Ny addresse 1
+new.entity.postalCode=1234
+
+start.ledger.name=Start kladde
+
+income.statement=RESULTATOPG\u00D8RELSE
+
+sales=Salg
+sales.dk=Salg DKK
+sales.dk.vat.type=U25
+sales.dk.without.vat=Salg DKK uden moms
+sales.eur=Salg europa
+sales.eur.vat.type=EU_U25
+sales.world=Salg verden
+sales.total=Salg total
+
+purchases=Varek\u00F8b
+purchases.dk=Varek\u00F8b DKK
+purchases.dk.vat.type=I25
+purchases.dk.without.vat=Varek\u00F8b DKK uden moms
+purchases.eur=Varek\u00F8b europa
+purchases.eur.vat.type=EU_I25
+purchases.world=Varek\u00F8b verden
+purchases.total=Varek\u00F8b total
+
+wages=Medarbejder udgifter
+wages.wages=L\u00F8nninger
+wages.pension=Pension
+wages.social.cost=Sociale bidrag
+wages.holiday.pay=Feriepenge
+wages.driving.reimbursement=KM godtg\u00F8relse
+wages.insurance=Forsikring
+wages.lunch=Frokost
+wages.other.cost=Andre omkostninger
+wages.total=Medarbejder udgifter total
+
+
+premises=Lokaler
+premises.rent=Husleje
+premises.rent.vat.type=I25
+premises.supplies=Varme, vand og el
+premises.supplies.vat.type=I25
+premises.maintenance=Vedligeholdelse
+premises.maintenance.vat.type=I25
+premises.total=Lokaler total
+
+
+administration=Administration
+administration.office.supplies=Kontorforsyninger
+administration.office.supplies.vat.type=I25
+administration.insurance=Forsikring
+administration.subscriptions=Abonnementer
+administration.subscriptions.vat.type=I25
+administration.subscriptions.without.vat=Abonnementer uden moms
+administration.telephone=Telefon
+administration.telephone.vat.type=I25
+administration.internet=Internet
+administration.internet.vat.type=I25
+administration.magazines=Blade
+administration.magazines.vat.type=I25
+administration.finance.assistance=Bogf\u00F8ringsassistance
+administration.finance.assistance.vat.type=I25
+administration.audit.assistance=Revisionsassistance
+administration.audit.assistance.vat.type=I25
+administration.legal.assistance=Juridisk assistance
+administration.legal.assistance.vat.type=I25
+administration.bad.debt=Tab p\u00E5 debitorer
+administration.bad.debt.vat.type=I25
+administration.total=Administration total
+
+depreciation=Afskrivninger
+depreciation.inventory=Afskrivninger inventar
+depreciation.goodwill=Afskrivninger goodwill
+depreciation.rights=Afskrivninger rettigheder
+depreciation.operation=Afskrivninger driftsmidler
+depreciation.leasehold=Afskrivninger indretning af lejede lokaler
+depreciation.total=Afskrivninger total
+
+received.interest=Modtagne renter
+received.interest.bank=Modtagne bank renter
+received.interest.debtor=Modtagne debitor renter
+received.interest.total=Modtagne renter total
+
+paid.interest=Betalte renter
+paid.interest.bank=Modtagne renter, bank
+paid.interest.creditor=Modtagne renter, kreditor
+paid.interest.public=Modtagne renter, offentlig
+paid.interest.total=Betalte renter total
+
+tax=Skatter
+tax.company=Selskabsskat
+tax.company.previous.year=Selskabsskat tidligere \u00E5r
+tax.deferred.tax=Hensat skat
+tax.total=Skatter total
+
+income.statement.total=RESULTATOPG\u00D8RELSE TOTAL
+
+assets=AKTIVER
+
+inventory=Inventar
+inventory.acquisition.cost.start=Inventar kostpris starten af \u00E5ret
+inventory.acquisition.cost=Inventar kostpris
+inventory.acquisition.cost.vat.type=I25
+inventory.disposals=Inventar frasalg
+inventory.depreciation.start=Inventar afskrivninger starten af \u00E5ret
+inventory.depreciation=Inventar afskrivninger
+inventory.depreciation.on.disposals=Inventar afskrivninger p\u00E5 frasalg
+inventory.total=Inventar total
+
+goodwill=Goodwill
+goodwill.acquisition.cost.start=Goodwill kostpris starten af \u00E5ret
+goodwill.acquisition.cost=Goodwill kostpris
+goodwill.acquisition.cost.vat.type=I25
+goodwill.disposals=Goodwill frasalg
+goodwill.depreciation.start=Goodwill afskrivninger starten af \u00E5ret
+goodwill.depreciation=Goodwill afskrivninger
+goodwill.depreciation.on.disposals=Goodwill afskrivninger p\u00E5 frasalg
+goodwill.total=Goodwill total
+
+rights=Rettigheder
+rights.acquisition.cost.start=Rettigheder kostpris starten af \u00E5ret
+rights.acquisition.cost=Rettigheder kostpris
+rights.acquisition.cost.vat.type=I25
+rights.disposals=Rettigheder frasalg
+rights.depreciation.start=Rettigheder afskrivninger starten af \u00E5ret
+rights.depreciation=Rettigheder afskrivninger
+rights.depreciation.on.disposals=Rettigheder afskrivninger p\u00E5 frasalg
+rights.total=Rettigheder total
+
+operation=Driftsmidler
+operation.acquisition.cost.start=Driftsmidler kostpris starten af \u00E5ret
+operation.acquisition.cost=Driftsmidler kostpris
+operation.acquisition.cost.vat.type=I25
+operation.disposals=Driftsmidler frasalg
+operation.depreciation.start=Driftsmidler afskrivninger starten af \u00E5ret
+operation.depreciation=Driftsmidler afskrivninger
+operation.depreciation.on.disposals=Driftsmidler afskrivninger p\u00E5 frasalg
+operation.total=Driftsmidler total
+
+leasehold=Indretning af lejede lokaler
+leasehold.acquisition.cost.start=Indretning af lejede lokaler kostpris starten af \u00E5ret
+leasehold.acquisition.cost=Indretning af lejede lokaler kostpris
+leasehold.acquisition.cost.vat.type=I25
+leasehold.disposals=Indretning af lejede lokaler frasalg
+leasehold.depreciation.start=Indretning af lejede lokaler afskrivninger starten af \u00E5ret
+leasehold.depreciation=Indretning af lejede lokaler afskrivninger
+leasehold.depreciation.on.disposals=Indretning af lejede lokaler afskrivninger p\u00E5 frasalg
+leasehold.total=Indretning af lejede lokaler total
+
+other.assets=Andre aktiver
+other.assets.debtors=Debitorer
+other.assets.receivables=Andre tilgodehavender
+other.assets.total=Andre aktiver total
+
+liquid.assets=Likvider
+liquid.assets.cash=Kontanter
+liquid.assets.bank.account=Bankkonto
+liquid.assets.total=Likvider total
+
+assets.total=AKTIVER TOTAL
+
+liabilities=PASSIVER
+
+equity=Egenkapital
+equity.share.capital=Anpartskapital
+equity.retained.earnings=Overf\u00F8rt resultat tidligere \u00E5r
+equity.current.result=\u00C5ret resultat
+equity.current.result.account.type=CURRENT_RESULT
+equity.total=Egenkapital total
+
+provision=Hens\u00E6ttelser
+provision.deferred.tax=Hensat skat
+provision.total=Hens\u00E6ttelser total
+
+long.term.debt=Langfristet g\u00E6ld
+long.term.debt.loan=Bankl\u00E5n
+long.term.debt.total=Langfristet g\u00E6ld total
+
+short.term.debt=Kortfristet g\u00E6ld
+short.term.debt.bank=Kassekredit
+short.term.debt.trade.creditors=Kreditorer
+short.term.debt.total=Kortfristet g\u00E6ld total
+
+vat=Moms
+vat.dk.incoming=K\u00F8bsmoms
+vat.dk.outgoing=Salgsmoms
+vat.dk.representation=Repr\u00E6sentations moms
+vat.eur.incoming=EU k\u00F8bsmoms
+vat.eur.outgoing=EU salgsmoms
+vat.reconciliation=Momsafstemning
+vat.total=Moms total
+
+other.debt=Anden g\u00E6ld
+other.debt.employee.tax.a-skat=Skyldig A-skat
+other.debt.employee.tax.am=Skyldig AM
+other.debt.employee.atp=Skyldig ATP
+other.debt.employee.pension=Skyldig pension
+other.debt.employee.wages=Skyldige l\u00F8nninger
+other.debt.employee.holiday.pay=Skyldige feriepenge
+other.debt.total=Anden g\u00E6ld
+
+liabilities.total=PASSIVER TOTAL
+
+check=BALANCE CHECK
+
 #Buttons ----------------------------------------------------------------------------------------------------------------------------------------------------------
+
+
 
 button.save=Gem
 button.cancel=Fortryd
