--- a/mainwar/src/main/webapp/WEB-INF/web.xml
+++ b/mainwar/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,11 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!-- TODO REMOVE-->
+    <session-config>
+        <session-timeout>200</session-timeout>
+    </session-config>
+
     <login-config>
         <auth-method>BASIC
         </auth-method>
