--- a/mainwar/src/main/jasperreports/BalancePage.properties
+++ b/mainwar/src/main/jasperreports/BalancePage.properties
@@ -4,8 +4,8 @@ report.dates={0} - {1} \
   ${2}
 report.dates.compare={0} - {1} \
   ${2}
-account.number=Account number
-account.name=Account name
+account.number=Number
+account.name=Name
 sum=Balance
 page=Page
 of=of
